CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

INCLUDE_DIRECTORIES(${PROJECT_INCL_DIR}) 
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(/home/alex/MySoftware/gtest/install/include)

IF( USE_PYTORCH )
LIST(APPEND CMAKE_PREFIX_PATH /home/alex/MySoftware/libtorch)
FIND_PACKAGE(Torch REQUIRED CONFIG)
INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
ENDIF()

SET(CMAKE_CXX_COMPILER /usr/bin/g++-11)
SET(CMAKE_C_COMPILER /usr/bin/gcc-11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True) 

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra")
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
SET(CMAKE_CXX_FLAGS "-O2")
ENDIF()

SET(CMAKE_LINKER_FLAGS "-pthread")

# use the Boost link directories
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})
LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX})
LINK_DIRECTORIES(/usr/lib/python3.8/config-3.8-x86_64-linux-gnu/)
LINK_DIRECTORIES(/home/alex/MySoftware/gtest/install/lib)

ADD_SUBDIRECTORY(example_1)
ADD_SUBDIRECTORY(example_2)
