CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

SET(EXECUTABLE  example_1)
SET(SOURCE ${EXECUTABLE}.cpp)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} gymfcpplib)

IF( USE_PYTORCH )
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PYTHON_LIB})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${BOOST_PYTHON_LIB})
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)

