CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

SET(SOURCE example_2.cpp)
SET(EXECUTABLE  example_2)

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} rlenvscpplib)

IF( USE_PYTORCH )
	TARGET_LINK_LIBRARIES(${EXECUTABLE} ${TORCH_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(${EXECUTABLE} ${PYTHON_LIB})
TARGET_LINK_LIBRARIES(${EXECUTABLE} ${BOOST_PYTHON_LIB})
TARGET_LINK_LIBRARIES(${EXECUTABLE} boost_system)

