CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

SET(EXECUTABLE  example_7)
SET(SOURCE ${EXECUTABLE}.cpp)

LINK_DIRECTORIES("/usr/local/lib")

ADD_EXECUTABLE(${EXECUTABLE} ${SOURCE})

TARGET_LINK_LIBRARIES(${EXECUTABLE} rlenvscpplib)

IF( USE_ALE_ENS )
	MESSAGE( STATUS  "Using ALE.")
	FIND_PACKAGE(ale REQUIRED)
	
	TARGET_LINK_LIBRARIES(${EXECUTABLE}   "/usr/local/lib/libale.a" )
ENDIF()

